TinyMount-0.2.4
  - Add setting to hide the tray icon if there are no connected devices.

TinyMount-0.2.2
---------------
  - Add libnotify support.

TinyMount-0.2.0
---------------
  Second release (stabilized after several betas):
  - Add config file
  - Add "Settings" dialog.
  - Settings to hide system disks, hide notifications (except errors).
  - Mount/umount devices asynchronously.
  - Auto mounting.
  - Add item format setting.

TinyMount-0.1.0
---------------
  First release.
  Features supported:
    - notify on device connected/disconnected.
    - mount/unmount device by user click.